# auth_service/docs/swagger.json
@@ -34,7 +34,10 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created"
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.UserSignUpResponse"
+                        }
                     }
                 }
             }
@@ -58,6 +61,18 @@
                     "type": "string"
                 },
                 "phone": {
+                    "description": "required: true",
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.UserSignUpResponse": {
+            "type": "object",
+            "required": [
+                "token"
+            ],
+            "properties": {
+                "token": {
                     "description": "required: true",
                     "type": "string"
                 }
